--- a/public/ekanban/css/kanban.css
+++ b/public/ekanban/css/kanban.css
@@ -4,10 +4,10 @@
 }
 
 .apps-container {
-  border: 2px dashed blue;
+ /* border: 2px dashed blue; */
   margin: 10px 10px 0 0;
   padding: 5px;
-  min-width:200px;
+  min-width:230px;
   min-height:50px;
 }
 
