--- a/public/ekanban/css/kanban.css
+++ b/public/ekanban/css/kanban.css
@@ -7,8 +7,8 @@
  /* border: 2px dashed blue; */
   margin: 10px 10px 0 0;
   padding: 5px;
-  min-width:230px;
-  min-height:50px;
+ /*min-width:247px; */
+ min-height:50px;
 }
 
 .app {
