--- a/public/ekanban/css/main.css
+++ b/public/ekanban/css/main.css
@@ -21,7 +21,10 @@ input.kanbanKey {
 	font-size: 1.5em;
 }
 
-.cards { padding: 0px;}
+.cards { padding: 0px;
+ min-height:50px;
+
+}
 
 #info {
   padding: 10px 15px;
